make container wider, update readme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .stats-bar { display: flex; gap: 16px; align-items: center; margin-left: auto; margin-right: 16px; }
     .stat-item { display: flex; align-items: center; gap: 6px; padding: 6px 12px; background: var(--hover); border: 1px solid var(--line); border-radius: 8px; font-size: 13px; }
     .stat-value { color: var(--accent); font-weight: 600; }
-    .wrap { display: grid; grid-template-columns: 380px 1fr; gap: 16px; padding: 16px; max-width: 1400px; margin: 0 auto; }
+    .wrap { display: grid; grid-template-columns: 480px 1fr; gap: 16px; padding: 16px; max-width: 2400px; margin: 0 auto; }
     @media (max-width: 768px) { .wrap { grid-template-columns: 1fr; } }
     .panel { background: var(--panel); border: 1px solid var(--line); border-radius: 14px; overflow: hidden; }
     .panel > .hd { display: flex; align-items: center; justify-content: space-between; padding: 12px 14px; border-bottom: 1px solid var(--line); background: linear-gradient(180deg, rgba(255,255,255,0.02), transparent); }
@@ -96,7 +96,7 @@
 <body>
   <header>
     <h1>📚 Bookmark Builder</h1>
-    <span class="tag">v2.0</span>
+    <span class="tag">by <a href="https://www.notalex.sh/">notalex.sh</a>.</span>
     <div class="stats-bar">
       <div class="stat-item">
         <span>📁</span>
